# llama-index-readers-azure-tax-forms

./: .gitignore  LICENSE  README.md  pyproject.toml  test_mock.py  test_real.py
.github/workflows/: ci.yml
samples/: generate_samples.py
src/llama_index_readers_azure_tax_forms/: __init__.py  audit.py  extractor.py  gate.py  normalizer.py  pdf_utils.py  reader.py
tests/: test_extractor.py  test_normalizer.py
